--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -32,12 +32,12 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [lint]
     steps:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.18
+          go-version: 1.21
 
       - name: Check out code
         uses: actions/checkout@v3
