--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,38 +7,25 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+-[a-z]+.[0-9]+
 
 jobs:
-  dockers:
-    uses: ./.github/workflows/docker.yml
-    strategy:
-      max-parallel: 2
-      matrix:
-        application:
-          - gofer
-          - spire
-          - ghost
-          - spectre
-    with:
-      application: ${{ matrix.application }}
+  go_releaser:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-#  go_releaser:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 0
-#
-#      - name: Set up Go
-#        uses: actions/setup-go@v4
-#        with:
-#          go-version: '1.20'
-#      - run: go version
-#
-#      - name: Run GoReleaser
-#        uses: goreleaser/goreleaser-action@v4
-#        with:
-#          distribution: goreleaser
-#          version: latest
-#          args: release --clean -f .github/.goreleaser.yml
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.21"
+      - run: go version
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --clean -f .github/.goreleaser.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
